<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_size_welcome"
        android:textColor="@color/button_background"/>


    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:singleLine="true"
        android:hint="@string/hint_username"/>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@id/et_username">

        <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/black"
        android:inputType="numberPassword"
            android:hint="@string/hint_password"/>
        <TextView
            android:id="@+id/tv_show_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/button_background"
            android:text="@string/txt_btn_show"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/rl_password"
        android:background="@color/button_background"
        android:textColor="@color/white"
        android:text="@string/txt_btn_login"
        />

</RelativeLayout>
