<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.botconsultancy.tnirpapp.PrintActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/button_background"
        android:minHeight="60dp"
        />

    <RelativeLayout
        android:layout_below="@id/toolbar"
        android:id="@+id/rl_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


   <EditText
       android:id="@+id/et_order_id"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textColor="@color/black"
       android:hint="@string/hint_order_id"
       android:singleLine="true"
       />

    <EditText
        android:id="@+id/et_cust_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_order_id"
        android:textColor="@color/black"
        android:hint="@string/hint_cust_name"
        android:enabled="false"/>

    <EditText
        android:id="@+id/et_desc"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_cust_name"
        android:hint="@string/hint_desc"
        />
<LinearLayout
    android:id="@+id/layout_button"
    android:layout_below="@id/et_desc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btn_print"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:enabled="false"
        android:layout_weight="1"
        android:background="@color/button_background"
        android:textColor="@color/white"
        android:text="@string/txt_btn_print"
        />
    <Button
        android:id="@+id/btn_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@color/button_background"
        android:textColor="@color/white"
        android:text="@string/txt_btn_clear"/>

</LinearLayout>

        <Button
            android:id="@+id/btn_takephoto"
            android:layout_below="@id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/button_background"
            android:text="Take Photo"/>

    </RelativeLayout>


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Powered By"
       />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/osm_logo_1"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
</LinearLayout>

</RelativeLayout>